--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta name="author" content="Magí Campo">
         <meta name="keywords" content="HTML, CSS, JavaScript, Presentation, Project, Developer">
-        <meta name="description" content="Presentation for 2020 work done">
+        <meta name="description" content="3D fit calculator">
     
         <link rel="icon" type="image/ico" href="">
         <link rel="stylesheet" type="text/css" href="./css/projects.css">
@@ -24,22 +24,22 @@
                 <h3>Item measures</h3>
                 <form>
                     <label for="item_lenght">Longitud</label>
-                    <input type="text" id="item_lenght" name="item_lenght" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="item_lenght" name="item_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
                     <label for="item_height">Altura</label>
-                    <input type="text" id="item_height" name="item_height" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="item_height" name="item_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
                     <label for="item_depth">Profundidad</label>
-                    <input type="text" id="item_depth" name="item_depth" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="item_depth" name="item_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
                 </form>
             </div>
             <div class="box_size">
                 <h3>Box measures</h3>
                 <form>
                     <label for="box_lenght">Longitud</label>
-                    <input type="text" id="box_lenght" name="box_lenght" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="box_lenght" name="box_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
                     <label for="box_height">Altura</label>
-                    <input type="text" id="box_height" name="box_height" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="box_height" name="box_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
                     <label for="box_depth">Profundidad</label>
-                    <input type="text" id="box_depth" name="box_depth" placeholder="insert measures in cm"><br><br>
+                    <input type="text" id="box_depth" name="box_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
                 </form>
             </div>
             <div class="option_buttons">
