--- a/index.html
+++ b/index.html
@@ -21,32 +21,49 @@
 
         <div class="container">
             <div class="item_size">
-                <h3>Item measures</h3>
-                <form>
-                    <label for="item_lenght">Longitud</label>
-                    <input type="text" id="item_lenght" name="item_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                    <label for="item_height">Altura</label>
-                    <input type="text" id="item_height" name="item_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                    <label for="item_depth">Profundidad</label>
-                    <input type="text" id="item_depth" name="item_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                </form>
+                <div class="item_measures">
+                    <h3>Item measures</h3>
+                    <form>
+                        <label for="item_lenght">Longitud</label>
+                        <input type="text" id="item_lenght" name="item_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                        <label for="item_height">Altura</label>
+                        <input type="text" id="item_height" name="item_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                        <label for="item_depth">Profundidad</label>
+                        <input type="text" id="item_depth" name="item_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                    </form>
+                </div>
+                <div class="item_canvas">
+
+                </div>
             </div>
             <div class="box_size">
-                <h3>Box measures</h3>
-                <form>
-                    <label for="box_lenght">Longitud</label>
-                    <input type="text" id="box_lenght" name="box_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                    <label for="box_height">Altura</label>
-                    <input type="text" id="box_height" name="box_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                    <label for="box_depth">Profundidad</label>
-                    <input type="text" id="box_depth" name="box_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
-                </form>
+                <div class="box_measures">
+                    <h3>Box measures</h3>
+                    <form>
+                        <label for="box_lenght">Longitud</label>
+                        <input type="text" id="box_lenght" name="box_lenght" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                        <label for="box_height">Altura</label>
+                        <input type="text" id="box_height" name="box_height" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                        <label for="box_depth">Profundidad</label>
+                        <input type="text" id="box_depth" name="box_depth" placeholder="insert measures in cm" autocomplete="off"><br><br>
+                    </form>
+                </div>
+                <div class="box_canvas">
+
+                </div>
             </div>
             <div class="option_buttons">
                 <button id="calculate" class="btn">Calculate!</button>
                 <button id="reset" class="btn">Reset values</button>
             </div>
-            <div class="solution"></div>
+            <div class="solutions">
+                <div class="first_solution"></div>
+                <div class="second_solution"></div>
+                <div class="third_solution"></div>
+                <div class="fouth_solution"></div>
+                <div class="fifth_solution"></div>
+                <div class="sixth_solution"></div>
+            </div>
         </div>
 
 
