--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </form>
                 </div>
                 <div class="box_canvas">
-
+                    
                 </div>
             </div>
             <div class="option_buttons">
@@ -66,6 +66,7 @@
             </div>
         </div>
 
+        <canvas id="prueba"></canvas>
 
         <script src="./js/lib/jquery-3.5.1.min.js"></script>
         <script src="./js/lib/materialize.min.js"></script>
