Draw input cubes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </form>
                 </div>
                 <div class="item_canvas">
-
+                    <canvas id="item_canvas"></canvas>
                 </div>
             </div>
             <div class="box_size">
@@ -49,7 +49,7 @@
                     </form>
                 </div>
                 <div class="box_canvas">
-                    
+                    <canvas id="box_canvas"></canvas>
                 </div>
             </div>
             <div class="option_buttons">
@@ -57,16 +57,26 @@
                 <button id="reset" class="btn">Reset values</button>
             </div>
             <div class="solutions">
-                <div class="first_solution"></div>
-                <div class="second_solution"></div>
-                <div class="third_solution"></div>
-                <div class="fouth_solution"></div>
-                <div class="fifth_solution"></div>
-                <div class="sixth_solution"></div>
+                <div class="solution">
+                    <canvas id="first"></canvas>
+                </div>
+                <div class="solution">
+                    <canvas id="second"></canvas>
+                </div>                    
+                <div class="solution">
+                    <canvas id="third"></canvas>
+                </div>                
+                <div class="solution">
+                    <canvas id="fouth"></canvas>
+                </div>                
+                <div class="solution">
+                    <canvas id="fifth"></canvas>
+                </div>                
+                <div class="solution">
+                    <canvas id="sixth"></canvas>
+                </div>
             </div>
         </div>
-
-        <canvas id="prueba"></canvas>
 
         <script src="./js/lib/jquery-3.5.1.min.js"></script>
         <script src="./js/lib/materialize.min.js"></script>
