--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			</div>
 
 			<div class="options">
-				<button class="waves-effect waves-light btn" id="calculate-btn">Calcular</button>
-				<button class="waves-effect waves-light btn" id="clear-btn">Limpiar</button>
+				<button class="waves-effect waves-light btn blue" id="calculate-btn">Calcular</button>
+				<button class="waves-effect waves-light btn blue" id="clear-btn">Limpiar</button>
 			</div>
 
 			<div class="solution ninja">
