--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta name="keywords" content="HTML, CSS, JavaScript, Calculator, Project, Developer, 3d">
         <meta name="description" content="3D fit calculator">
 
-		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/calculadora.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="stylesheet" href="./css/calculadora.css">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
@@ -35,7 +35,6 @@
 
 	          		<label for="item_ancho">Anchura</label>
 	          		<input type="text" id="item_ancho" name="item_ancho" placeholder="Ancho en cm" autocomplete="off">
-	          	
 
 	          		<label for="item_profundidad">Profundidad</label>
 	          		<input type="text" id="item_profundidad" name="item_profundidad" placeholder="Profundidad en cm" autocomplete="off">
@@ -50,12 +49,19 @@
 				<div class="box_form">
 					<h4>Medidas de la caja</h4>
 
+					<div class="Box_Templates">
+						<button class="waves-effect waves-light btn" id="cajonPequeño">Pequeño</button>
+						<button class="waves-effect waves-light btn" id="cajonMediano">Mediano</button>
+						<button class="waves-effect waves-light btn" id="cajonGrande">Grande</button>
+						<button class="waves-effect waves-light btn" id="cajonSupergrande">SuperGrande</button>
+					</div>
+
 					<label for="box_alto">Altura</label>
 					<input type="text" id="box_alto" name="box_alto" placeholder="Alto en cm" autocomplete="off">
 
 					<label for="box_ancho">Anchura</label>
 	          		<input type="text" id="box_ancho" name="box_ancho" placeholder="Ancho en cm" autocomplete="off">
-	          	
+
 	          		<label for="box_profundidad">Profundidad</label>
 	          		<input type="text" id="box_profundidad" name="box_profundidad" placeholder="Profundidad en cm" autocomplete="off">
           		</div>
@@ -66,8 +72,8 @@
 			</div>
 
 			<div class="options">
-				<button class="waves-effect waves-light btn blue" id="calculate-btn">Calcular</button>
-				<button class="waves-effect waves-light btn blue" id="clear-btn">Limpiar</button>
+				<button class="waves-effect waves-light btn" id="calculate-btn">Calcular</button>
+				<button class="waves-effect waves-light btn" id="clear-btn">Limpiar</button>
 			</div>
 
 			<div class="solution ninja">
@@ -101,10 +107,8 @@
 			</div>
 		</div>
 
-		<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
+		<script	src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
+  		<!-- <script src="https://gist.github.com/ForbesLindesay/5467742.js"></script> -->
   		<script type="text/javascript" src="./js/calculadora.js"></script>
 	</body>
 </html>
